--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3 text-center">GifTastic API</h1>
-    <p class="lead text-center">Add an animal button to the list. Click Gif to watch it animate!</p>
+    <p class="lead text-center">Add an animal button to the list. Double click Gif to watch it animate!</p>
+    <a href="https://github.com/fmedina771/GifTastic"><h2 class= "text-center"> GitHub Repo</h2></a>
   </div>
 </div>
 <div class="container">
@@ -41,7 +42,7 @@
                 <form id="animal-form">
                     <!-- Search Form Goes Here -->
                     <!-- Adds label to search box -->
-                    <label for="animal-input">Add an Animal</label>
+                    <label for="animal-input"><h3>Add an Animal</h3></label>
                     <br/>
                     <!-- Specifies what type of input and an ID  -->
                     <input type="text" id="animal-input">
